--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/add.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/add.html
@@ -39,7 +39,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="col-sm-3 control-label is-required">Job执行器：</label>
+        <label class="col-sm-3 control-label is-required" id="jobExecutorLabel">Job执行器：</label>
         <div class="col-sm-9">
           <textarea rows="3" name="jobExecutor" class="form-control" placeholder="支持：执行器类名、Spring bean name、DAG表达式、源码" required>[(*{jobExecutor})]</textarea>
         </div>
@@ -190,6 +190,15 @@
       });
       retryType.trigger("change");
 
+      const jobType = $("select[name='jobType']");
+      const jobExecutor = $("textarea[name='jobExecutor']");
+      const addViewDagLink = function () {
+        const isDag = (jobExecutor.val() && jobType.val() === "2");
+        $("#jobExecutorLabel").html(isDag ? '<a href="javascript:void(0)" onclick="viewDag()">Job执行器：</a>' : 'Job执行器：');
+      };
+      jobType.change(addViewDagLink);
+      jobExecutor.blur(addViewDagLink);
+      jobExecutor.trigger("blur");
     });
 
     $("#form-job-add").validate({
@@ -220,6 +229,20 @@
       if ($.validate.form()) {
         $.operate.save(prefix + "/add", $('#form-job-add').serialize());
       }
+    }
+
+    function viewDag() {
+      // https://layui.dev/docs/2/layer/#photos
+      layer.photos({
+        photos: {
+          title: "DAG",
+          data: [{
+            alt: "DAG",
+            src: prefix + "/dag?expr=" + encodeURIComponent($("textarea[name='jobExecutor']").val())
+          }]
+        },
+        footer: false
+      });
     }
   </script>
 
