--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
@@ -33,7 +33,10 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="col-sm-3 control-label is-required" id="jobExecutorLabel">Job执行器：</label>
+        <label th:switch="${job.jobType}" class="col-sm-3 control-label is-required">
+          <a th:case="2" href="javascript:void(0)" onclick="viewDag()">Job执行器：</a>
+          <span th:case="*">Job执行器：</span>
+        </label>
         <div class="col-sm-9">
           <pre id="jobExecutor"></pre>
         </div>
@@ -127,10 +130,6 @@
     $(function () {
       viewJson("jobParam",    [[${job.jobParam}]]    );
       viewJson("jobExecutor", [[${job.jobExecutor}]] );
-
-      if ([[${job.jobType}]] === 2) {
-        $("#jobExecutorLabel").html('<a href="javascript:void(0)" onclick="viewDag()">Job执行器：</a>');
-      }
     });
 
     function viewJson(id, text) {
