--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
@@ -274,7 +274,7 @@
       <li>启动以下各应用(执行java main方法)组成分布式调度集群</li>
     </ol>
     <blockquote>
-      <p dir="auto">已配置不同的端口可同时启动。可以在开发工具中运行Java类，也可通过<code>java -jar</code>命令运行构建好的jar包。</p>
+      <p dir="auto">已配置不同的端口可同时启动，可以在开发工具中运行Java main方法，也可通过<code>java -jar</code>命令运行构建好的jar包</p>
     </blockquote>
     <ul dir="auto">
       <li><a href="https://github.com/dromara/disjob/blob/master/disjob-test/src/main/java/cn/ponfee/disjob/test/EmbeddedMysqlAndRedisServer.java">启动内嵌的本地Mysql &amp; Redis</a>
