--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
@@ -107,9 +107,9 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="col-sm-3 control-label is-required">重新发布的执行策略：</label>
+        <label class="col-sm-3 control-label is-required">Worker关机的执行策略：</label>
         <div class="col-sm-9">
-          <p class="form-control-static">[( ${@disjobService.desc('RedeployStrategy', job.redeployStrategy)} )]</p>
+          <p class="form-control-static">[( ${@disjobService.desc('ShutdownStrategy', job.shutdownStrategy)} )]</p>
         </div>
       </div>
       <div class="form-group">
