--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
@@ -214,8 +214,8 @@
       }
     },
     {
-      field: 'attach',
-      title: '附加信息',
+      field: 'workflowCurNode',
+      title: '当前节点',
       width: '85',
       formatter: function (value, row, index) {
         return $.table.tooltip(value, 20, "open");
