--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/worker.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/worker.html
@@ -13,7 +13,7 @@
             <ul>
               <li>
                 <label>Worker：</label>
-                <input type="text" name="worker" th:value="${worker}" placeholder="摘除后可输入`host:port`来查询" autocomplete="off" />
+                <input type="text" name="worker" th:value="${worker}" placeholder="移除后可输入`host:port`来查询" autocomplete="off" />
               </li>
               <li>
                 <a class="btn btn-primary btn-rounded btn-sm" onclick="searchWorker()"><i class="fa fa-search"></i>&nbsp;搜索</a>
@@ -132,7 +132,7 @@
           align: 'center',
           formatter: function (value, row, index) {
             const actions = [];
-            actions.push("<a class='btn btn-danger btn-rounded btn-xs' href='javascript:void(0)' onclick='operate(&quot;REMOVE_WORKER&quot;, &quot;摘除该Worker&quot;, &quot;" + row.workerId + "&quot;, &quot;" + row.host + "&quot;, " + row.port + ")'><i class='fa fa-remove'></i> 摘除Worker</a> ");
+            actions.push("<a class='btn btn-danger btn-rounded btn-xs' href='javascript:void(0)' onclick='operate(&quot;REMOVE_WORKER&quot;, &quot;移除该Worker&quot;, &quot;" + row.workerId + "&quot;, &quot;" + row.host + "&quot;, " + row.port + ")'><i class='fa fa-remove'></i> 移除Worker</a> ");
             return '<a tabindex="0" class="btn btn-info btn-rounded btn-xs" role="button" data-container="body" data-placement="left" data-toggle="popover" data-html="true" data-trigger="hover" data-content="' + actions.join('') + '"><i class="fa fa-chevron-circle-right"></i> 操作</a>';
           }
         }]
