--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/worker.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/worker.html
@@ -64,7 +64,7 @@
         },
         {
           field: 'completedTaskCount',
-          title: '已执行完成任务数'
+          title: '已完成任务数'
         },
         {
           field: 'closed',
@@ -90,7 +90,7 @@
         },
         {
           field: 'startupTime',
-          title: 'Worker启动时间'
+          title: '启动时间'
         }]
       };
 
