--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/worker.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/worker.html
@@ -99,7 +99,7 @@
         },
         {
           field: 'completedTaskCount',
-          title: '已执行完成任务数'
+          title: '已完成任务数'
         },
         {
           field: 'closed',
@@ -125,7 +125,7 @@
         },
         {
           field: 'startupTime',
-          title: 'Worker启动时间'
+          title: '启动时间'
         },
         {
           title: '操作',
