--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/mygroup.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/mygroup.html
@@ -65,7 +65,7 @@
           field: 'workerContextPath',
           title: 'Context-path',
           cellStyle: function (value, row, index) {
-            return { css: { "min-width": "50px", "white-space": "nowrap", "text-overflow": "ellipsis", "overflow": "hidden", "max-width": "200px" } }
+            return { css: { "white-space": "nowrap" } }
           }
         },
         {
