--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/supervisor/supervisor.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/supervisor/supervisor.html
@@ -50,11 +50,17 @@
         },
         {
           field: 'version',
-          title: 'Version'
+          title: 'Version',
+          cellStyle: function (value, row, index) {
+            return { css: { "white-space": "nowrap" } }
+          }
         },
         {
           field: 'startupTime',
-          title: '启动时间'
+          title: '启动时间',
+          cellStyle: function (value, row, index) {
+            return { css: { "white-space": "nowrap" } }
+          }
         }]
       };
 
