--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/mygroup.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/mygroup.html
@@ -80,15 +80,15 @@
           }
         },
         {
-          field: 'alarmUsers',
+          field: 'alertUsers',
           title: '告警人员',
           formatter: function (value, row, index) {
             return $.table.tooltip(value, 72, "open");
           }
         },
         {
-          field: 'webHook',
-          title: 'Web Hook',
+          field: 'webhook',
+          title: 'Webhook',
           formatter: function (value, row, index) {
             return $.table.tooltip(value, 72, "open");
           }
