--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/edit.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/edit.html
@@ -34,15 +34,15 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="col-xs-2 control-label" style="padding-right: 0;">Alarm Users：</label>
+        <label class="col-xs-2 control-label" style="padding-right: 0;">Alert Users：</label>
         <div class="col-xs-10">
-          <input type="text" name="alarmUsers" th:field="*{alarmUsers}" autocomplete="off" data-role="tagsinput" />
+          <input type="text" name="alertUsers" th:field="*{alertUsers}" autocomplete="off" data-role="tagsinput" />
         </div>
       </div>
       <div class="form-group">
-        <label class="col-xs-2 control-label" style="padding-right: 0;">Web Hook：</label>
+        <label class="col-xs-2 control-label" style="padding-right: 0;">Webhook：</label>
         <div class="col-xs-10">
-          <input name="webHook" th:field="*{webHook}" class="form-control" type="text" autocomplete="off" />
+          <input name="webhook" th:field="*{webhook}" class="form-control" type="text" autocomplete="off" />
         </div>
       </div>
       <div class="form-group">
