--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/tasks.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/tasks.html
@@ -54,13 +54,9 @@
         },
         {
           field: 'executeDuration',
-          title: '执行时长(秒)',
+          title: '执行时长',
           formatter: function (value, row, index) {
-            if (value === 0) {
-              return "0";
-            }
-            let scale = value < 10000 ? 3 : (value < 100000 ? 2 : 1);
-            return value ? (value / 1000).toFixed(scale) : "-";
+            return $.common.formatDuration(value);
           }
         },
         {
