optimize alert module

--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
@@ -220,7 +220,7 @@
         <td>无</td>
         <td>邮件</td>
         <td>邮件</td>
-        <td>暂无</td>
+        <td>邮件、钉钉、企业微信、飞书、短信等</td>
       </tr>
       <tr>
         <td><strong>查看执行日志</strong></td>
@@ -496,12 +496,11 @@
     <ul class="contains-task-list">
       <li class="task-list-item"><input type="checkbox" id="" disabled="" class="task-list-item-checkbox" checked=""> 扩展注册中心：Zookeeper、Etcd、Nacos</li>
       <li class="task-list-item"><input type="checkbox" id="" disabled="" class="task-list-item-checkbox" checked=""> 工作流任务(Workflow DAG)</li>
-      <li class="task-list-item"><input type="checkbox" id="" disabled="" class="task-list-item-checkbox" checked=""> 管理后台、用户体系及权限控制</li>
+      <li class="task-list-item"><input type="checkbox" id="" disabled="" class="task-list-item-checkbox" checked=""> 管理后台：用户体系、权限控制、调度管理等</li>
+      <li class="task-list-item"><input type="checkbox" id="" disabled="" class="task-list-item-checkbox" checked=""> 任务执行异常告警通知：邮件、短信、电话、飞书、钉钉、微信</li>
       <li class="task-list-item"><input type="checkbox" id="" disabled="" class="task-list-item-checkbox"> 搭建一个关于项目使用说明的文档站点</li>
       <li class="task-list-item"><input type="checkbox" id="" disabled="" class="task-list-item-checkbox"> 在线查看任务实时运行日志</li>
-      <li class="task-list-item"><input type="checkbox" id="" disabled="" class="task-list-item-checkbox"> 任务执行异常告警通知：邮件、短信、电话、飞书、钉钉、微信</li>
       <li class="task-list-item"><input type="checkbox" id="" disabled="" class="task-list-item-checkbox"> 任务执行情况的可视化监控BI(Dashboard)</li>
-      <li class="task-list-item"><input type="checkbox" id="" disabled="" class="task-list-item-checkbox"> 增加多种Savepoint的支持：File System、Hadoop、RocksDB</li>
     </ul>
   </article></div></div></div>
 
