--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/edit.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/edit.html
@@ -123,6 +123,14 @@
           </select>
         </div>
       </div>
+      <div class="form-group">
+        <label class="col-sm-3 control-label is-required">告警选项：</label>
+        <div class="col-sm-9">
+          <input type="hidden" name="alertOptions" />
+          <label class="check-box"><input type="checkbox" name="alertCheckbox" value="1" th:checked="${job.alertOptions==1 || job.alertOptions==3}" />异常警报</label>
+          <label class="check-box"><input type="checkbox" name="alertCheckbox" value="2" th:checked="${job.alertOptions==2 || job.alertOptions==3}" />正常通知</label>
+        </div>
+      </div>
     </form>
   </div>
 
@@ -228,6 +236,9 @@
 
     function submitHandler() {
       if ($.validate.form()) {
+        const alertAlarm  = $("input[name='alertCheckbox'][value='1']").prop('checked') ? 1 : 0;
+        const alertNotice = $("input[name='alertCheckbox'][value='2']").prop('checked') ? 2 : 0;
+        $("input[type='hidden'][name='alertOptions']").val(alertAlarm ^ alertNotice);
         $.operate.save(prefix + "/edit", $('#form-job-edit').serialize());
       }
     }
