--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
@@ -113,6 +113,13 @@
         </div>
       </div>
       <div class="form-group">
+        <label class="col-sm-3 control-label is-required">告警选项：</label>
+        <div class="col-sm-9">
+          <label class="check-box"><input type="checkbox" th:checked="${job.alertOptions==1 || job.alertOptions==3}" disabled />异常警报</label>
+          <label class="check-box"><input type="checkbox" th:checked="${job.alertOptions==2 || job.alertOptions==3}" disabled />正常通知</label>
+        </div>
+      </div>
+      <div class="form-group">
         <label class="col-sm-3 control-label">备注：</label>
         <div class="col-sm-9">
           <p class="form-control-static">[(*{remark})]</p>
